Implemented automatic rights and roles management through ACE.
* remove old code and change functionname

* Update DomainRESTController.java

* Create RoleConfig.java

* Update docker-compose.dev.yml

* added handling on domain caching

* adding tests

* update roles

* Removed Makefile.

* Reverted some unnecessary changes.

* Improved comments for role configuration.

* Removed unnecessary code. Changed a log-level. Minor code work.

* Minor code cleanup.

* Fix waiting condition. Code cleanup.

* Introduced new exception. Code work.

* Renamed the DomainOIDCService and improved code and comments.

* Added OIDCException to replace some NPEs.

* Improved code.

* Improved utility methods. Renamed some.

* Changed the file-logging to a rolling appender to limit maximum used space. Log-levels are now configurable from the application.yml.

* Improved consistency between files.

* Removed command line interaction. Resetting the test environment is now done programmatically.

* Fix tests.

* Switch to custom keycloak image containing curl for the healthcheck.

* Removed deprecated method.

* Code improvements.

* Improved the way Keycloak roles and groups are created, deleted, and updated.

* Fixed broken keycloak example.

* Improved configuration.

* Fix tests.

* Update README.md

* Added endpoint to remove roles. Added trace-information.

* Improved caching code. Fixed an issue where an unlock is called on a non-acquired locked.

* Fixed wrong values in HTTP response DTO.

* Updated keycloak example dump to be as minimal as possible and as comprehensive as needed.

* Improved Keycloak SQL example slightly.

---------

Co-authored-by: Eric Wündisch <eric.wuendisch@charite.de>
Co-authored-by: Armin Müller <armin.mueller@bih-charite.de>