@@ -1,6 +1,6 @@
 /*
  * ACE - Advanced Confidentiality Engine
- * Copyright 2022-2024 Armin Müller & Eric Wündisch
+ * Copyright 2022-2025 Armin Müller & Eric Wündisch
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,21 +17,29 @@
 
 package org.trustdeck.ace.service;
 
+import jakarta.servlet.http.HttpServletRequest;
 import lombok.extern.slf4j.Slf4j;
-
 import org.jooq.CommonTableExpression;
 import org.jooq.DSLContext;
 import org.jooq.DeleteConditionStep;
+import org.jooq.impl.DSL;
 import org.jooq.JoinType;
 import org.jooq.Record;
 import org.jooq.SelectQuery;
-import org.jooq.impl.DSL;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DuplicateKeyException;
 import org.springframework.data.util.Pair;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
 import org.springframework.stereotype.Service;
 import org.trustdeck.ace.algorithms.PathFinder;
-import org.trustdeck.ace.exception.*;
+import org.trustdeck.ace.exception.DomainOIDCException;
+import org.trustdeck.ace.exception.DomainNotFoundException;
+import org.trustdeck.ace.exception.DuplicateDomainException;
+import org.trustdeck.ace.exception.FailedChildDomainDeletionException;
+import org.trustdeck.ace.exception.FailedChildDomainUpdateException;
+import org.trustdeck.ace.exception.FailedPseudonymDeletionException;
+import org.trustdeck.ace.exception.FailedPseudonymUpdateException;
+import org.trustdeck.ace.exception.UnexpectedResultSizeException;
 import org.trustdeck.ace.jooq.generated.tables.daos.AuditeventDao;
 import org.trustdeck.ace.jooq.generated.tables.daos.DomainDao;
 import org.trustdeck.ace.jooq.generated.tables.pojos.Auditevent;
@@ -41,15 +49,14 @@ import org.trustdeck.ace.jooq.generated.tables.records.PseudonymRecord;
 import org.trustdeck.ace.security.audittrail.event.AuditEventBuilder;
 import org.trustdeck.ace.utils.Assertion;
 
-import jakarta.servlet.http.HttpServletRequest;
 import java.util.ArrayList;
 import java.util.List;
 
+import static org.jooq.impl.DSL.field;
 import static org.jooq.impl.DSL.name;
 import static org.jooq.impl.DSL.select;
 import static org.trustdeck.ace.jooq.generated.Tables.DOMAIN;
 import static org.trustdeck.ace.jooq.generated.Tables.PSEUDONYM;
-import static org.jooq.impl.DSL.field;
 
 /**
  * This class is used to encapsulate all methods needed to access the database for handling domains.
@@ -80,6 +87,10 @@ public class DomainDBAccessService {
     /** Enables the access to the domain specific database access methods. */
     @Autowired
     private PseudonymDBAccessService pseudonymDBAccessService;
+
+    /** Handles rights and roles for domains. */
+    @Autowired
+    private DomainOIDCService domainOidcService;
 
     /** Represents the duplication status of a requested insertion of a domain into the database. */
     public static final String INSERTION_DUPLICATE = "duplicate";
@@ -145,7 +156,7 @@ public class DomainDBAccessService {
             });
 
             // At this point the retrieval was successful
-            log.debug("Sucessfully queried the database for the domain using the name.");
+            log.debug("Successfully queried the database for the domain using the name.");
             return domain;
         } catch (Exception e) {
             log.error("Couldn't retrieve the domain " + domainName + " from the database: " + e.getMessage() + "\n");
@@ -182,7 +193,7 @@ public class DomainDBAccessService {
             });
 
             // At this point the retrieval was successful
-            log.debug("Sucessfully queried the database for the domain using the ID.");
+            log.debug("Successfully queried the database for the domain using the ID.");
             return domain;
         } catch (Exception e) {
             log.error("Couldn't retrieve the domain with ID " + domainID + " from the database: " + e.getMessage() + "\n");
@@ -291,14 +302,16 @@ public class DomainDBAccessService {
 		// Check if the given information is sufficient to start the linking-process
         if (sourceDomain == null) {
         	log.debug("The domain to start the search from (\"" + sourceDomainName + "\") was not found.");
+            return null;
         } else if (targetDomain == null) {
         	log.debug("The domain to find the target in (\"" + targetDomainName + "\") was not found.");
-        } else if (sourceRecordList == null || sourceRecordList.size() == 0) {
+            return null;
+        } else if (sourceRecordList == null || sourceRecordList.isEmpty()) {
         	log.debug("The record to start the search from was not found.");
             return null;
         }
         
-        Pseudonym sourceRecord = sourceRecordList.get(0);
+        Pseudonym sourceRecord = sourceRecordList.getFirst();
         
         // Generate the tree starting from the given source-domain and generate the path to the destination domain
         PathFinder pathFinder = new PathFinder(getDomainTreeStructure(sourceDomain));
@@ -417,7 +430,7 @@ public class DomainDBAccessService {
 			});
 			
 			// At this point the retrieval was successful
-            log.debug("Sucessfully retrieved all pseudonym-values from the domain.");
+            log.debug("Successfully retrieved all pseudonym-values from the domain.");
             return pseudonyms;
         } catch (Exception e) {
             log.error("Couldn't retrieve the pseudonym-values of domain " + domainName + " from the database: " + e.getMessage() + "\n");
@@ -460,7 +473,7 @@ public class DomainDBAccessService {
             });
 
             // At this point the retrieval was successful
-            log.debug("Sucessfully retrieved all records from the domain.");
+            log.debug("Successfully retrieved all records from the domain.");
             return pseudonyms;
         } catch (Exception e) {
             log.error("Couldn't retrieve the records of domain " + domainName + " from the database: " + e.getMessage() + "\n");
@@ -509,7 +522,7 @@ public class DomainDBAccessService {
             });
 
             // At this point the retrieval was successful
-            log.debug("Sucessfully retrieved the number of records in the domain.");
+            log.debug("Successfully retrieved the number of records in the domain.");
             return count;
         } catch (DomainNotFoundException e) {
         	log.error("Domain \"" + domainName + "\" wasn't found in the database.");
@@ -556,7 +569,7 @@ public class DomainDBAccessService {
 
                         // Recursive call of the delete method -> DFS
                         if (deleteDomain(childName, recursiveDeletion, request)) {
-                            /** (deletions on the connections opened in this DFS are committed only if
+                            /* (deletions on the connections opened in this DFS are committed only if
                              * the deletion is successful from bottom to top, otherwise the deletion fails
                              * and the error is transferred bottom-up.)
                              */
@@ -569,7 +582,7 @@ public class DomainDBAccessService {
                     }
                 }
 
-                /** NOTE: This point is reached the first time, when the DFS found the last sub-domain in
+                /* NOTE: This point is reached the first time, when the DFS found the last sub-domain in
                  * the "domain-tree". From here the bottom-up deletion starts. First delete the records in
                  * the domain, then delete the domain itself and return one recursion level upward.
                  */
@@ -626,6 +639,16 @@ public class DomainDBAccessService {
 	                	// Write audit information into database
 	                	this.getAuditeventDao().insert(auditEvent);
 	                }
+	                
+	                
+	                // Check if the information needed for OIDC management are in the token
+                    JwtAuthenticationToken token = (JwtAuthenticationToken) request.getUserPrincipal();
+                    if (token == null || token.getToken() == null || token.getToken().getSubject().isBlank()) {
+                        throw new DomainOIDCException(domain.getName());
+                    }
+
+                    // Remove the associated groups and roles for this domain from Keycloak
+                    domainOidcService.leaveAndDeleteDomainGroupsAndRoles(domainName);
                 }
 
                 // Implicit transaction commit here
@@ -647,8 +670,11 @@ public class DomainDBAccessService {
             log.error("The deletion would have affected an unexpected number of database entries. It should only affect 1, "
                     + "but affected " + h.getActualSize() + " database entries.");
             return false;
-        } catch (Exception i) {
-            log.error("Couldn't delete the record from the database: " + i.getMessage() + "\n");
+        } catch (DomainOIDCException i) {
+            log.error("Couldn't delete OIDC rights and roles of domain \"" + i.getDomainName() + "\".");
+            return false;
+        } catch (Exception j) {
+            log.error("Couldn't delete the record from the database: " + j.getMessage() + "\n");
             return false;
         }
     }
@@ -708,21 +734,30 @@ public class DomainDBAccessService {
                     log.error("Couldn't insert the domain into the database.");
                     throw new UnexpectedResultSizeException(1, insertedRecords);
                 }
-                
+
                 // Create audit event object
                 if (request != null) {
-	                Auditevent auditEvent = auditEventBuilder.build(request);
-	                if (auditEvent != null) {
-	                	// Write audit information into database
-	                	this.getAuditeventDao().insert(auditEvent);
-	                }
+                    Auditevent auditEvent = auditEventBuilder.build(request);
+                    if (auditEvent != null) {
+                        // Write audit information into database
+                        this.getAuditeventDao().insert(auditEvent);
+                    }
+
+                    // Check if the information needed for OIDC management are in the token
+                    JwtAuthenticationToken token = (JwtAuthenticationToken) request.getUserPrincipal();
+                    if (token == null || token.getToken() == null || token.getToken().getSubject().isBlank()) {
+                        throw new DomainOIDCException(domain.getName());
+                    }
+
+                    // Create domain groups and roles and add the user that made this request to the new groups and roles
+                    domainOidcService.createDomainGroupsAndRolesAndJoin(domain.getName(), token.getToken().getSubject());
                 }
 
                 // Implicit transaction commit here
             });
 
             // At this point the insertion was successful
-            log.debug("Sucessfully added the new domain into the database.");
+            log.debug("Successfully added the new domain into the database.");
             return INSERTION_SUCCESS;
         } catch (DuplicateDomainException e) {
             log.debug("The domain that should be inserted (\"" + e.getDomainName() + "\") was already in the database. No insertion performed.");
@@ -734,8 +769,11 @@ public class DomainDBAccessService {
             log.error("The insertion would have affected an unexpected number of domains. It should only affect 1 domain, "
                     + "but affected " + g.getActualSize() + " domains.");
             return INSERTION_ERROR;
-        } catch (Exception h) {
-            log.error("Couldn't insert the domain into the database: " + h.getMessage() + "\n");
+        } catch (DomainOIDCException h) {
+            log.error("Creating OIDC rights and roles for the domain \"" + h.getDomainName() + "\" failed. No insertion performed.");
+            return INSERTION_ERROR;
+        } catch (Exception i) {
+            log.error("Couldn't insert the domain into the database: " + i.getMessage());
             return INSERTION_ERROR;
         }
     }
@@ -956,6 +994,22 @@ public class DomainDBAccessService {
 	                	// Write audit information into database
 	                	this.getAuditeventDao().insert(auditEvent);
 	                }
+
+                    // Check if the OIDC rights and roles need to be adapted
+                    if (newDomain.getName() != null && !oldDomain.getName().equals(newDomain.getName())
+                            && domainOidcService.canBeUsedAsDomainGroup(newDomain.getName())) {
+                        // The domain name has changed, so we need to update the OIDC rights and roles
+                        JwtAuthenticationToken token = (JwtAuthenticationToken) request.getUserPrincipal();
+                        
+                        if (token != null && token.getToken() != null && !token.getToken().getSubject().isBlank()) {
+                            try {
+                                domainOidcService.updateDomainGroups(oldDomain.getName(), newDomain.getName(), token.getToken().getSubject());
+                            } catch (Exception e) {
+                                log.error("Updating OIDC rights and roles failed: " + e.getMessage());
+                                throw new DomainOIDCException("oldName: " + oldDomain.getName() + ", newName: " + newDomain.getName());
+                            }
+                        }
+                    }
                 }
 
                 // Implicit transaction commit here
@@ -977,8 +1031,11 @@ public class DomainDBAccessService {
         } catch (FailedChildDomainUpdateException h) {
             log.error("Updating the child-domain \"" + h.getChildName() + "\" was unsuccessful and was therefore rolled back.");
             return false;
-        } catch (Exception i) {
-            log.error("Couldn't update the domain: " + i.getMessage() + "\n");
+        } catch (DomainOIDCException i) {
+            log.error("Updating the OIDC rights and roles failed for the domain (" + i.getDomainName() + "). The update was therefore rolled back.");
+            return false;
+        } catch (Exception j) {
+            log.error("Couldn't update the domain: " + j.getMessage() + "\n");
             return false;
         }
     }
